# doctranscribe

./: .env.example  .gitignore  LICENSE  Makefile  README.md  apply_env_fixes.sh  apply_env_fixes.sh.bak  assistants_test.py  check_env.py  check_imports.py  docker-compose.override.yml  docker-compose.override.yml.bak  docker-compose.yml  doctranscribe.db.backup  env-fix-instructions.md  fix_env.py  get_api_key.py  package-lock.json  set_openai_key.sh  simple_test.py  test_api.py  test_input.json  test_openai_direct.py  test_openai_key.py
backend/: create_admin.py  dockerfile  doctranscribe.db  fix_database.py  fix_env.py  openapi.json  pyproject.toml  recreate_db.py  requirements.txt  run_server.py  simple_auth.py  simple_pdf_server.py  simplest_auth.py  test.db  worker.py
backend/app/: __init__.py  auth.py  config.py  database.py  db_migration.py  deps.py  main.py  main_simple.py  models.py  schemas.py  worker.py
backend/app/routers/: assistant.py  auth.py  extract.py  handwriting.py  jobs.py  results.py  upload.py
backend/app/services/: .pdf_service.py.swp  anomaly.py  extract.py  openai_service.py  pdf_service.py  xlsx.py  xlsx_service.py
backend/tests/: test_anomaly.py  test_extract.py  test_handwriting.py  test_integration_extract_route.py  test_upload.py
docs/: environment_setup.md
frontend/: .eslintrc.cjs  .stylelintrc.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
output/: mental_health_survey_v4_assistant_results.json  mental_health_survey_v4_gpt41_results.json  (+1 more)
(+32 files in other folders)
