[tool.poetry]
name = "doctranscribe-backend"
version = "0.1.0"
description = "FastAPI backend for DocTranscribe"
authors = ["DocTranscribe Team <team@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
python-multipart = "^0.0.9"
boto3 = "^1.34.103"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api" 